[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Screens/RevivalShop/RevivalShop.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Screens/RevivalShop/RevivalShopItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UserInterface/Buttons/GameButton.tscn" type="PackedScene" id=3]

[node name="RevivalShop" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.2, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 540.0
margin_bottom = 295.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 263.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 226.0
margin_top = 25.0
margin_right = 314.0
margin_bottom = 237.0
size_flags_vertical = 3

[node name="Item_enemies_per_level" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 88.0
color = Color( 0.243137, 1, 0, 1 )
info = "zmniejszenie ilości przeciwników na poziom:"

[node name="Item_earn_gold" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 44.0
color = Color( 0.243137, 1, 0, 1 )
info = "zwiększenie ilości zdobywanego złota:"

[node name="Item_earn_xp" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 48.0
margin_right = 88.0
margin_bottom = 68.0
color = Color( 0.243137, 1, 0, 1 )
info = "zwiększenie ilości zdobywanego doświadczenia:"

[node name="Item_time_to_kill_boss" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 92.0
color = Color( 0.996078, 0.0117647, 0.0117647, 1 )
info = "zwiększenie timera na bossach:"

[node name="Item_silver_moon_probability" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 96.0
margin_right = 88.0
margin_bottom = 116.0
color = Color( 1, 0.937255, 0, 1 )
info = "szanse zdobycia srebrnych ksiezyców:"

[node name="Item_basic_start_level" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 120.0
margin_right = 88.0
margin_bottom = 140.0
color = Color( 0.243137, 1, 0, 1 )
info = "rozpoczęcie rozgrywki od poziomu:"

[node name="Item_basic_damage" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 144.0
margin_right = 88.0
margin_bottom = 164.0
color = Color( 0.243137, 1, 0, 1 )
info = "bazowe obrażenia gracza:"

[node name="Item_basic_hp" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 168.0
margin_right = 88.0
margin_bottom = 188.0
color = Color( 0.243137, 1, 0, 1 )
info = "bazowe hp gracza"

[node name="Item_items_price" parent="Control/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 192.0
margin_right = 88.0
margin_bottom = 212.0
color = Color( 1, 0.937255, 0, 1 )
info = "zmniejszenie kosztu przedmiotów u kupca o:"

[node name="Button" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 214.0
margin_top = 267.0
margin_right = 326.0
margin_bottom = 295.0
size_flags_horizontal = 4
button_label = "EXIT"
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Button" to="." method="exit"]
